[gd_scene load_steps=56 format=2]

[ext_resource path="res://Texture/png/light.png" type="Texture" id=1]
[ext_resource path="res://Texture/png/altar 224x288 - standing on grass.png" type="Texture" id=2]
[ext_resource path="res://mapas/cesped.tmx" type="PackedScene" id=3]
[ext_resource path="res://Sprite/Jugador.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/Configuracion/Configuracion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprite/Jugador.gd" type="Script" id=6]
[ext_resource path="res://scripts/mapa principal.gd" type="Script" id=7]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0.0336914, 11.9998, 1.01685, 5.99707, -3.98303, 6.01111, -2.96619, 12.0082 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 833, 713.375 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 771.75, 492 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 49.93, 31.3328 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1120, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1568, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1792, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2016, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2240, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2464, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2688, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2912, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3136, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3360, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3584, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3808, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4032, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4256, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4480, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4704, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4928, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5152, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5376, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5600, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5824, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6048, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6272, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6496, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6720, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6944, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7168, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7392, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7616, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7840, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8064, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8288, 0, 224, 288 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8512, 0, 224, 288 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=42]
polygon = PoolVector2Array( 1503, 824, 1504, 862, 1504, 869, 1514, 879, 1505.52, 836.613, 1503, 824, 1514, 814, 1514, 814 )

[sub_resource type="OccluderPolygon2D" id=43]
polygon = PoolVector2Array( 1504, 923, 1515, 935, 1525, 968, 1515, 978, 1504, 968, 1504, 923 )

[sub_resource type="OccluderPolygon2D" id=44]
polygon = PoolVector2Array( 1622, 969, 1632, 978, 1643, 967, 1643, 923, 1632, 934 )

[sub_resource type="OccluderPolygon2D" id=45]
polygon = PoolVector2Array( 1643, 824, 1632, 878, 1632, 878, 1643, 869, 1643, 824, 1633, 814 )

[node name="mapa" type="Node2D"]
script = ExtResource( 7 )

[node name="Jugador" parent="." instance=ExtResource( 4 )]
position = Vector2( 1569, 4745 )
rotation = 0.0028171
z_index = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Jugador"]
position = Vector2( 1.00293, 0.997559 )
occluder = SubResource( 1 )

[node name="Button" type="Button" parent="Jugador"]
margin_left = -34.0
margin_top = -111.0
margin_right = 30.0
margin_bottom = -51.0

[node name="Mapa" type="Node2D" parent="."]

[node name="cesped" parent="Mapa" instance=ExtResource( 3 )]
position = Vector2( -32, 9 )

[node name="deteccion pelican" type="Area2D" parent="Mapa/cesped/Pelican" index="0"]
visible = false
position = Vector2( 32, -10 )
z_index = 1

[node name="area pelican" type="CollisionShape2D" parent="Mapa/cesped/Pelican/deteccion pelican"]
position = Vector2( 1564, 4191.38 )
shape = SubResource( 46 )

[node name="AreaRuinas" type="Area2D" parent="Mapa/cesped/ruinas zeri" index="8"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mapa/cesped/ruinas zeri/AreaRuinas"]
visible = false
position = Vector2( 1557, 2380 )
shape = SubResource( 47 )

[node name="AreaCombate" type="Area2D" parent="Mapa/cesped/ruinas zeri" index="9"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mapa/cesped/ruinas zeri/AreaCombate"]
visible = false
position = Vector2( 1533.48, 1526.66 )
scale = Vector2( 10.1046, 9.9685 )
shape = SubResource( 48 )

[node name="muralla" parent="Mapa/cesped" index="4"]
position = Vector2( 64, -3425 )

[node name="muralla alta" parent="Mapa/cesped/muralla" index="1"]
z_index = 2

[node name="murallas" parent="Mapa/cesped/muralla" index="2"]
z_index = 2

[node name="bosque camino muralla" parent="Mapa/cesped" index="5"]
z_index = 3

[node name="bosque camino -11" parent="Mapa/cesped/bosque camino muralla" index="1"]
z_index = 2

[node name="bosque camino -10" parent="Mapa/cesped/bosque camino muralla" index="2"]
z_index = 2

[node name="bosque camino -9" parent="Mapa/cesped/bosque camino muralla" index="3"]
z_index = 2

[node name="bosque camino -8" parent="Mapa/cesped/bosque camino muralla" index="5"]
z_index = 2

[node name="bosque camino -7" parent="Mapa/cesped/bosque camino muralla" index="7"]
z_index = 2

[node name="bosque camino -6" parent="Mapa/cesped/bosque camino muralla" index="9"]
z_index = 2

[node name="bosqeu camino -5" parent="Mapa/cesped/bosque camino muralla" index="11"]
z_index = 2

[node name="bosque camino -4" parent="Mapa/cesped/bosque camino muralla" index="13"]
z_index = 2

[node name="bosque camino -3" parent="Mapa/cesped/bosque camino muralla" index="15"]
z_index = 2

[node name="bosque camino -2" parent="Mapa/cesped/bosque camino muralla" index="17"]
z_index = 2

[node name="bosque camino -1" parent="Mapa/cesped/bosque camino muralla" index="19"]
z_index = 2

[node name="bosque camino 1" parent="Mapa/cesped/bosque camino muralla" index="20"]
z_index = 2

[node name="bosque camino 2" parent="Mapa/cesped/bosque camino muralla" index="21"]
z_index = 2

[node name="bosque camino 3" parent="Mapa/cesped/bosque camino muralla" index="22"]
z_index = 2

[node name="bosque zeri" parent="Mapa/cesped" index="6"]
z_index = 5

[node name="bosque camino ruinas" parent="Mapa/cesped" index="7"]
z_index = 5

[node name="bosque ruina" parent="Mapa/cesped" index="8"]
z_index = 5

[node name="Bosque pelican" parent="Mapa/cesped" index="9"]
z_index = 5

[node name="bosque seco pelican" parent="Mapa/cesped" index="10"]
z_index = 5

[node name="Fuente" type="Node2D" parent="Mapa"]
position = Vector2( -54, 673 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mapa/Fuente"]
show_behind_parent = true
position = Vector2( 1575, 921 )
frames = SubResource( 41 )
frame = 9
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Mapa/Fuente"]
occluder = SubResource( 42 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Mapa/Fuente"]
occluder = SubResource( 43 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Mapa/Fuente"]
occluder = SubResource( 44 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Mapa/Fuente"]
occluder = SubResource( 45 )

[node name="Luces" type="Node2D" parent="."]
visible = false
position = Vector2( -8, 8 )
rotation = -2.48907

[node name="Light2D" type="Light2D" parent="Luces"]
position = Vector2( -1585.52, 61.9741 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="Luces"]
position = Vector2( -1409.97, -155.991 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
offset = Vector2( -57.072, -696.962 )
color = Color( 0.894118, 0.658824, 0.921569, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="Luces"]
show_behind_parent = true
position = Vector2( -1796.66, 243.608 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.447059, 0.0235294, 0.486275, 1 )
shadow_enabled = true

[node name="Light2D4" type="Light2D" parent="Luces"]
position = Vector2( -2099.13, 346.36 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D5" type="Light2D" parent="Luces"]
position = Vector2( -2044.26, 421.683 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D6" type="Light2D" parent="Luces"]
position = Vector2( -2060.18, 34.3926 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D7" type="Light2D" parent="Luces"]
position = Vector2( -1931.41, -69.2451 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D8" type="Light2D" parent="Luces"]
position = Vector2( -1362.84, 203.408 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
offset = Vector2( -57.072, -696.962 )
color = Color( 0.894118, 0.658824, 0.921569, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D9" type="Light2D" parent="Luces"]
position = Vector2( -1730.46, 461.323 )
rotation = -2.0542
scale = Vector2( 0.341343, 0.398662 )
texture = ExtResource( 1 )
color = Color( 0.952941, 0.839216, 0.396078, 1 )
energy = 0.7
shadow_enabled = true

[node name="collisiones muralla" type="StaticBody2D" parent="."]
position = Vector2( 64, -3425 )

[node name="muralla izquierda" type="CollisionPolygon2D" parent="collisiones muralla"]
position = Vector2( -31, 9 )
polygon = PoolVector2Array( 0, 3678, 0, 3684, 447, 3684, 448, 3697, 450, 3699, 451, 3716, 541, 3716, 542, 3699, 544, 3697, 544, 3684, 960, 3684, 961, 3697, 963, 3699, 963, 3715, 1054, 3715, 1054, 3699, 1056, 3697, 1056, 3684, 1440, 3684, 1440, 3697, 1442, 3699, 1442, 3716, 1533, 3716, 1534, 3699, 1536, 3697, 1535, 3646, 1534, 3649, 1439, 3648, 1440, 3678, 1056, 3678, 1055, 3650, 960, 3650, 960, 3678, 544, 3678, 543, 3648, 448, 3649, 448, 3678 )

[node name="muralla derecha" type="CollisionPolygon2D" parent="collisiones muralla"]
position = Vector2( -33, 10 )
polygon = PoolVector2Array( 1664, 3648, 1664, 3698, 1667, 3699, 1667, 3716, 1757, 3716, 1758, 3699, 1760, 3697, 1760, 3685, 2240, 3684, 2240, 3697, 2242, 3698, 2243, 3709, 2334, 3709, 2334, 3698, 2336, 3697, 2336, 3684, 2688, 3684, 2688, 3697, 2690, 3699, 2690, 3708, 2782, 3708, 2782, 3699, 2784, 3697, 2784, 3684, 3200, 3684, 3200, 3678, 2784, 3678, 2784, 3648, 2688, 3648, 2688, 3678, 2336, 3678, 2336, 3650, 2240, 3648, 2240, 3677, 1760, 3678, 1760, 3648 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="colision pelica" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -32, 8 )
polygon = PoolVector2Array( 1567, 4604, 1567, 4710, 1579, 4734, 1582, 4764, 1588, 4783, 1589, 4796, 1593, 4801, 1599, 4801, 1605, 4800, 1611, 4799, 1611, 4791, 1611, 4782, 1612, 4776, 1615, 4766, 1618, 4762, 1620, 4733, 1631, 4712, 1633, 4703, 1633, 4609, 1646, 4611, 1646, 4701, 1637, 4722, 1630, 4738, 1626, 4764, 1619, 4775, 1617, 4786, 1612, 4801, 1604, 4803, 1591, 4803, 1586, 4794, 1584, 4779, 1576, 4764, 1566, 4730, 1561, 4717, 1560, 4703, 1559, 4604 )

[node name="UI" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Jugador/Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Mapa/cesped/Pelican/deteccion pelican" to="Jugador" method="_on_deteccion_pelican_body_entered"]
[connection signal="body_entered" from="Mapa/cesped/Pelican/deteccion pelican" to="Jugador" method="_on_Colision_pelican_body_entered"]
[connection signal="body_exited" from="Mapa/cesped/Pelican/deteccion pelican" to="Jugador" method="_on_deteccion_pelican_body_exited"]
[connection signal="body_exited" from="Mapa/cesped/Pelican/deteccion pelican" to="Jugador" method="_on_Colision_pelican_body_exited"]
[connection signal="body_entered" from="Mapa/cesped/ruinas zeri/AreaRuinas" to="Jugador" method="_on_AreaRuinas_body_entered"]
[connection signal="body_exited" from="Mapa/cesped/ruinas zeri/AreaRuinas" to="Jugador" method="_on_AreaRuinas_body_exited"]
[connection signal="body_entered" from="Mapa/cesped/ruinas zeri/AreaCombate" to="Jugador" method="_on_AreaCombate_body_entered"]
[connection signal="body_exited" from="Mapa/cesped/ruinas zeri/AreaCombate" to="Jugador" method="_on_AreaCombate_body_exited"]

[editable path="Mapa/cesped"]
